# electionguard-verifier

./: Cargo.toml
.github/workflows/: rustbuild.yml
benches/: dlog.rs
proptest-regressions/crypto/: elgamal.txt  group.txt
src/: crypto.rs  generate.rs
src/crypto/: chaum_pedersen.rs  dlog.rs  elgamal.rs  group.rs  hash.rs  schnorr.rs
src/crypto/chaum_pedersen/: disj.rs
tests/: json.rs
